--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,11 +126,11 @@ flutter_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/app_logo.png"
+  image_path: "assets/images/app_logo.jpeg"
 
 # Generate app logo for splash screen
 flutter_native_splash:
   color: "#ffffff"
-  image: "assets/images/app_logo.png"
+  image: "assets/images/app_logo.jpeg"
   android: true
   ios: true   
