update logo for lunch icon and slpash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,11 +126,12 @@ flutter_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/app_logo.jpeg"
+  image_path: "assets/images/app_logo.png"
+ 
 
 # Generate app logo for splash screen
 flutter_native_splash:
-  color: "#ffffff"
-  image: "assets/images/app_logo.jpeg"
+  color: "#FFFFFF"
+  image: "assets/images/app_logo.png"
   android: true
   ios: true   
